--- a/src/app/list/components/add-form/add-form.component.html
+++ b/src/app/list/components/add-form/add-form.component.html
@@ -2,15 +2,21 @@
   <h2 class="mt-3">Add New Parts</h2>
   <form (ngSubmit)="onSubmit()" [formGroup]="newItemForm">
     <div class="mt-3">
-      <label for="name" class="form-label">Part Name</label>
-      <input type="text" formControlName="name" class="form-control" />
+      <!-- <label for="name" class="form-label">Part Name</label>
+      <input type="text" formControlName="name" class="form-control" /> -->
+      <mat-form-field class="input">
+        <mat-label for="name">Part Name</mat-label>
+        <input matInput type="text" formControlName="name" />
+      </mat-form-field>
       <span *ngIf="isNotValidField('name')" class="form-text text-danger">
         Name is required and must have at least 3 characters.
       </span>
     </div>
     <div class="mt-3">
-      <label for="price" class="form-label">Price</label>
-      <input type="text" formControlName="price" class="form-control" />
+      <mat-form-field class="input">
+        <mat-label for="price">Price</mat-label>
+        <input matInput type="text" formControlName="price" />
+      </mat-form-field>
       <span *ngIf="isNotValidField('price')" class="form-text text-danger">
         Price is required, and must have at leart 2 characters.
       </span>
